# proyecto_deteccion_fractura

./: Makefile  README.md  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/api/: routes.py
app/core/: model_loader.py
app/schemas/: prediction_schema.py
app/services/: fracture_service.py
app/utils/: image_utils.py
frontend/: app.py
frontend/components/: header.py  result_panel.py  uploader.py
frontend/services/: api_client.py
frontend/styles/: theme.py
